--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="form-container">
-                    <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+                    <form method="post" enctype="text/plain">
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Imię" required>
                         </div>
