--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     
                 </div>
                 <div class="image-container">
-                    <img src="img/main-image.jpg" alt="Moje zdjęcie" class="profile-image">
+                    <img src="img/rename.jpg" alt="Moje zdjęcie" class="profile-image">
                 </div>
             </section>
             <section id="about" class="section section-about">
