repairing description error

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>    
                     <div class="about-box">
                         <h2>Więcej o mnie</h2>
-                        <p>Od zawsze pasjonują mnie komputery – zaczęło się od fascynacji technologią, która z czasem stała się moją życiową ścieżką. Pochodzę z Głogowa, miasta, do którego mam ogromny sentyment, ale to w Zielonej Górze na studiach inżynierskich z informatyki zdobyłem solidne fundamenty w dziedzinie informatyki. Programowanie daje mi sporo satysfakcji, bo pozwala na twórcze rozwiązywanie problemów i ciągłe odkrywanie nowych rzeczy.</p>
+                        <p>Od zawsze pasjonują mnie komputery – zaczęło się od fascynacji technologią, która z czasem stała się moją życiową ścieżką. Pochodzę z Głogowa, miasta, do którego mam ogromny sentyment, ale to w Zielonej Górze na studiach inżynierskich zdobyłem solidne fundamenty w dziedzinie informatyki. Programowanie daje mi sporo satysfakcji, bo pozwala na twórcze rozwiązywanie problemów i ciągłe odkrywanie nowych rzeczy.</p>
                          <p>Poza technologią mam kilka innych pasji. Uwielbiam gry logiczne – sudoku, kostka Rubika – które rozwijają moje myślenie i uczą cierpliwości. Jestem też wiernym kibicem angielskiej piłki nożnej, zawsze trzymam kciuki za ulubione drużyny. W wolnych chwilach lubię zagłębić się w nowe historie, odkrywając niesamowite światy przez audiobooki i seriale.</p>
                     </div>
                                    
