--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
                 </div>
                 
                 <div class="project-container">
-                    <a href="portfolio.html" target="_blank" class="project-box">
+                    <a href="https://portfolio.kacperadamiak.info/" target="_blank" class="project-box">
                         <div class="project-box-content">
                             <h3>Programowanie</h3>
                             <p>Opis projektów związanych z programowaniem, takich jak aplikacje webowe czy dektopowe.</p>
                         </div>
                     </a>
-                    <a href="portfolio.html" target="_blank" class="project-box">
+                    <a href="https://portfolio.kacperadamiak.info/" target="_blank" class="project-box">
                         <div class="project-box-content">
                             <h3>Sieci komputerowe</h3>
                             <p>Opis projektów dotyczących konfiguracji i zarządzania sieciami komputerowymi.</p>
                         </div>
                     </a>
-                    <a href="portfolio.html" target="_blank" class="project-box">
+                    <a href="https://portfolio.kacperadamiak.info/" target="_blank" class="project-box">
                         <div class="project-box-content">
                             <h3>Systemy operacyjne</h3>
                             <p>Opis projektów związanych z systemami operacyjnymi, w tym skrypty.</p>
