small changes in menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="logo">
               <img src="img/ikonka3.png" alt="Moja ikona" class="icon">
-            <h1 class="site-name">Adamiak&nbsp; Kacper</h1>
+            <h1 class="site-name">Kacper&nbsp; Adamiak</h1>
         </div>
     
         <div class="list">
