changes in menu, new version of cv

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="logo">
               <img src="img/ikonka3.png" alt="Moja ikona" class="icon">
-            <h1 class="site-name">Kacper&nbsp; Adamiak</h1>
+            <h1 class="site-name">Kacper Adamiak</h1>
         </div>
     
         <div class="list">
@@ -71,7 +71,7 @@
                     <p>Niedawno ukończyłem studia inżynierskie z informatyki, podczas których zdobyłem solidne podstawy teoretyczne i praktyczne, zwłaszcza w programowaniu, sieciach komputerowych i systemach operacyjnych. Interesuję się nowymi technologiami i cyberbezpieczeństwem i nieustannie poszerzam swoją wiedzę w tych obszarach.</p>
                     <p>Zachęcam do zapoznania się z pozostałymi sekcjami na mojej stronie, a także do sprawdzenia mojego CV, za pomocą przycisku poniżej.</p>
                     <div class="btn-container">
-                        <a href="files/resume_private.pdf" class="btn" target="_blank">Sprawdź CV</a>
+                        <a href="files/cv-private.pdf" class="btn" target="_blank">Sprawdź CV</a>
                     </div>
                     
                 </div>
@@ -122,7 +122,7 @@
                     <div class="skill-box">
                         <div class="skill-icons"><i class="fas fa-network-wired"></i></div>
                         <h4>Sieci komputerowe</h4>
-                        <p>Znajomość zagadnień związanych z sieciami komputerowymi, w tym protokołów sieciowych, architektury sieci oraz konfiguracji urządzeń sieciowych, zgodnie z programem kursu Cisco Essentials. Zrozumienie zasad działania sieci LAN i WAN oraz umiejętność diagnostyki i rozwiązywania problemów.</p>
+                        <p>Znajomość zagadnień związanych z sieciami komputerowymi, w tym protokołów sieciowych, architektury sieci oraz konfiguracji urządzeń sieciowych, zgodnie z programem kursu Cisco Network Basics. Zrozumienie zasad działania sieci LAN i WAN oraz umiejętność diagnostyki i rozwiązywania problemów.</p>
                     </div>
                     <div class="skill-box">
                         <div class="skill-icons"><i class="fas fa-language"></i></div>
